--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,14 @@
-@import './utils/variables';
+@import "./utils/variables";
+@import "./utils/functions";
+@import "./utils/mixins";
 
-@import './base/css.scss';
-@import './layout/css.scss';
-@import './pages/css.scss';
-@import './components/css.scss';
+
+@import "./base/base";
+@import "./base/typography";
+
+@import "./components/button";
+
+@import "./layout/header";
+@import "./layout/nav";
+@import "./layout/container";
+@import "./layout/form";
