--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -1,8 +1,13 @@
-body, h2{ 
-
+body{ 
 font-family: 'Roboto', sans-serif;
+margin: 0;
+background: #f6f6f6;
 }
 
 h1{
 font-family: 'Shrikhand', cursive;  
+}
+
+a{
+    text-decoration: none;
 }
