--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,10 @@
 @import "./components/button";
 
 @import "./layout/header";
-@import "./layout/nav";
+@import "./layout/footer";
 @import "./layout/container";
 @import "./layout/form";
+
+@import "./pages/index";
+
+
