--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,9 +1,11 @@
 .hero_button {
-    display: inline-block;
     @include center-element();
-    background-color: $color-primary;
+    &-sub{
     color: white;
-    border-radius: 25px;
+    border: transparent solid;
+    padding: 15px 20px;
+    background-color: $color-primary;
+    border-radius: 50px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,.3);
-    
+    }
 }
