--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,20 @@
 .location{
-    @include center-element();
-    background: #f3f3f3;
+    @include center-element;
+    width: 100%;
+    background: #eaeaea;
     color: #7a7a7a;
+    align-items: baseline;
+    justify-items: center;
+    #icon_location{
+        color: black;
+        font-size: 1.2em;
+    }
+    .search_bar{
+        font-size: 1em;
+        font-weight: 700;
+        border: none;
+        background: #eaeaea;
+        padding: 18px 0;
+        margin-left: 15px;
+    }
 }
