--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,11 +1,23 @@
 .hero_button {
-    @include center-element();
-    &-sub{
-    color: white;
-    border: transparent solid;
-    padding: 15px 20px;
-    background-color: $color-primary;
-    border-radius: 50px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.3);
-    }
+   @include center-element();
+   &-sub{
+   @include center-element();
+   background-image: linear-gradient(to left, $color-secondary 0%, $color-primary 51%, $color-secondary 100%);
+   cursor: pointer;
+   padding: 15px 25px;
+   text-align: center;
+   transition: 0.5s;
+   background-size: 200%;
+   color: white;            
+   border-radius: 50px;
+   box-shadow: 2px 2px 10px 2px rgba(0,0,0,.3);
+   display: block;
+   &:hover {
+   background-position: right center; 
+   background: $button-search;
+   color: #fff;
+   text-decoration: none;
+   box-shadow: $button-shadow;
+ }
+}
 }
