--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -4,10 +4,10 @@
     background: #eaeaea;
     color: #7a7a7a;
     align-items: baseline;
-    justify-items: center;
     #icon_location{
         color: black;
         font-size: 1.2em;
+        margin-left: 4rem;
     }
     .search_bar{
         font-size: 1em;
@@ -16,5 +16,18 @@
         background: #eaeaea;
         padding: 18px 0;
         margin-left: 15px;
+        cursor: pointer;
+    }
+}
+
+.hero{
+    text-align: center;
+    &_title{
+        font-weight: 700;
+        font-size: 1.5em;
+        margin: 40px 60px auto 60px;
+    }
+    &_text{
+        font-size: 1.1em;
     }
 }
