sass_index-restaurants+footer

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@
     @include center-element();
     height: 80px;
     width: 100%;
+    background-color: white;
     &_logo {
         align-content: center;
     }
