--- a/public/style.css
+++ b/public/style.css
@@ -66,35 +66,56 @@ a:visited {
   align-items: center;
   height: 80px;
   width: 100%;
+  background-color: white;
 }
 .header_logo {
   align-content: center;
 }
 
+.footer a, i {
+  color: white;
+}
+
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   background-color: #353535;
 }
 .footer_bloc {
   display: inline;
-  color: white;
+  padding: 0 20px;
+  width: 100%;
+  margin-bottom: 30px;
 }
-.footer-links {
+.footer_bloc .logo {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 20px 0;
+}
+.footer_bloc-links {
   display: inline-flex;
   flex-direction: column;
   width: auto;
 }
-.footer-link {
+.footer_bloc-link {
   display: inline-flex;
   align-items: center;
   flex-direction: row;
-  text-align: center;
-  cursor: pointer;
+  line-height: 0.1em;
 }
-.footer-link:hover .footer_bloc-link_title {
+.footer_bloc-link:hover {
   text-decoration: underline;
 }
+.footer_bloc-link i {
+  margin-right: 10px;
+}
+.footer_bloc-link_title {
+  font-weight: 400;
+}
 
+/*-- location search */
 .location {
   display: flex;
   justify-content: center;
@@ -121,6 +142,7 @@ a:visited {
 
 .hero {
   text-align: center;
+  padding-bottom: 40px;
 }
 .hero_title {
   font-weight: 700;
@@ -129,6 +151,143 @@ a:visited {
 }
 .hero_text {
   font-size: 1.1em;
+}
+
+/*-- user notice guidelines --*/
+.user_notice {
+  padding: 12% 0;
+  background: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.notice {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  background-color: white;
+  padding: 0;
+}
+.notice_title {
+  margin: 0;
+}
+.notice_steps {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 5%;
+}
+.notice_step {
+  display: flex;
+  align-items: center;
+  background: #f6f6f6;
+  height: auto;
+  width: auto;
+  margin: 13px 20px;
+  border-radius: 20px;
+  padding: 10px 0;
+  position: relative;
+  box-shadow: 0px 2px 8px 1px rgba(0, 0, 0, 0.15);
+}
+
+.notice_step .step_number {
+  background-color: #9356DC;
+  color: white;
+  position: absolute;
+  padding: 3px 8px 3px 8px;
+  border: transparent 1px;
+  border-radius: 500px;
+  transform: translateX(-50%);
+}
+.notice_step .step_icon {
+  color: #7e7e7e;
+  font-size: 120%;
+  margin: 0 20px 0 35px;
+}
+.notice_step .step_text {
+  font-weight: 700;
+}
+
+/*-- restaurants --*/
+.restaurants {
+  margin: 0;
+  padding: 30px 8px;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.restaurant_items {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 20px;
+  padding: 8px;
+}
+.restaurant_item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.3);
+}
+.restaurant_item_image {
+  width: 100%;
+  height: 190px;
+}
+.restaurant_item_image > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+.restaurant_item_new {
+  position: absolute;
+  background-color: #99E2D0;
+  top: 20px;
+  right: 10px;
+}
+.restaurant_item_new p {
+  color: #008766;
+  font-size: 0.9em;
+  font-weight: 700;
+  padding: 6px 13px;
+  margin: 0;
+}
+.restaurant_item:hover {
+  transition: 0.4s;
+  transform: scale(1.02);
+  box-shadow: 0px 2px 10px 1px rgba(145, 85, 220, 0.5);
+}
+
+.restaurant_bloc {
+  background: white;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 75px;
+  border-radius: 0 0 20px 20px;
+}
+.restaurant_bloc-info {
+  margin-left: 15px;
+}
+.restaurant_bloc-info > :first-child {
+  font-size: 1.1em;
+  font-weight: 700;
+  padding-bottom: 5px;
+}
+.restaurant_bloc-heart {
+  margin-right: 30px;
+  font-size: 150%;
 }
 
 /*# sourceMappingURL=style.css.map */
