--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,24 +1,41 @@
+.footer a, i{
+    color: white;
+}
+
 .footer{
+    @include center-element;
     width: 100%;
     background-color: #353535;
     &_bloc{
         display: inline;
-        color: white;
-    }
-    &-links {
-        display: inline-flex;
-        flex-direction: column;
-        width: auto;
-    }
-    &-link {
-        display: inline-flex;
-        align-items: center;
-        flex-direction: row;
-        text-align: center;
-        cursor: pointer;
-        &:hover .footer_bloc-link_title{
-            text-decoration: underline;
+        padding: 0 20px;
+        width: 100%;
+        margin-bottom: 30px;
+        & .logo{
+            font-size: 20px;
+            font-weight: 500;
+            padding: 20px 0;  
         }
-    
+        &-links{
+            display: inline-flex;
+            flex-direction: column;
+            width: auto;
+        }
+        &-link{
+            display: inline-flex;
+            align-items: center;
+            flex-direction: row;
+            line-height: 0.1em;
+            &:hover {
+                text-decoration: underline;
+            }
+            & i{
+                margin-right: 10px;
+            }
+            &_title{
+                font-weight: 400;
+            }
+        }
+
     }
 }
