--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,3 +1,4 @@
+/*-- location search */
 .location{
     @include center-element;
     width: 100%;
@@ -22,6 +23,7 @@
 
 .hero{
     text-align: center;
+    padding-bottom: 40px;
     &_title{
         font-weight: 700;
         font-size: 1.5em;
@@ -30,4 +32,137 @@
     &_text{
         font-size: 1.1em;
     }
+}
+
+/*-- user notice guidelines --*/
+.user_notice{
+    padding: 12% 0;
+    background: white;
+    width: 100%;
+    @include center-element;
+}
+.notice{
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    background-color: white;
+    padding: 0;
+    &_title{
+        margin: 0;
+    }
+    &_steps{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin-top: 5%;
+    }
+    &_step{
+        display: flex;
+        align-items: center;
+        background: #f6f6f6;
+        height: auto;
+        width: auto;
+        margin: 13px 20px;
+        border-radius: 20px;
+        padding: 10px 0;
+        position: relative;
+        box-shadow: 0px 2px 8px 1px rgba(0,0,0,0.15);
+    }
+}
+.notice_step{
+    .step_number{
+        background-color: $color-primary;
+        color: white;
+        position: absolute;
+        padding: 3px 8px 3px 8px;
+        border: transparent 1px;
+        border-radius: 500px;
+        transform: translateX(-50%);
+    }
+    .step_icon{
+            color: #7e7e7e;
+            font-size: 120%;
+            margin: 0 20px 0 35px;
+        }   
+    .step_text{
+        font-weight: 700;
+    }
+    }
+
+/*-- restaurants --*/
+    .restaurants{
+        margin: 0;
+        padding: 30px 8px;
+        max-width: 1200px;
+        @include center-element;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .restaurant{
+        &_items{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(4,1fr);
+            grid-gap: 20px;
+            padding: 8px;
+        }
+        &_item{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        width: 100%;
+        border-radius: 20px;
+        box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.3);
+        &_image{
+            width: 100%;
+            height: 190px;
+            & > img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 20px 20px 0 0;
+            }
+        }
+        &_new{
+            position: absolute;
+            background-color: $color-tertiary;
+            top: 20px; right: 10px;
+            & p{
+                color: #008766;
+                font-size: 0.9em;
+                font-weight: 700;
+                padding: 6px 13px;
+                margin: 0;
+            }
+        }
+        &:hover {
+            transition: 0.4s;
+            transform: scale(1.02);
+            box-shadow: 0px 2px 10px 1px rgba(145,85,220,0.5);;
+        }
+    }
+}
+
+.restaurant_bloc{
+    background: white;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 75px;
+    border-radius: 0 0 20px 20px;
+    &-info{
+        margin-left: 15px;
+        & > :first-child{
+            font-size: 1.1em;
+             font-weight: 700;
+            padding-bottom: 5px;}
+        }
+    &-heart{
+        margin-right: 30px;
+        font-size: 150%;
+    }
+    
 }
