--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./base/typography";
 
 @import "./components/button";
+@import "./components/loading";
 
 @import "./layout/header";
 @import "./layout/footer";
@@ -14,5 +15,6 @@
 @import "./layout/form";
 
 @import "./pages/index";
+@import "./pages/menu";
 
 
