--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,4 @@
-.hero_button {
+.hero_button{
    @include center-element();
    &-sub{
    @include center-element();
@@ -19,5 +19,26 @@
    text-decoration: none;
    box-shadow: $button-shadow;
  }
+}
+}
+
+.menu_button{
+  @include center-element();
+  margin: 25px 0 60px 0;
+  &_order{
+  background-image: linear-gradient(to left, $color-secondary 0%, $color-primary 70%, $color-secondary 100%);
+  cursor: pointer;
+  padding: 18px 60px;
+  text-align: center;
+  transition: 0.5s;
+  background-size: 200%;
+  color: white;            
+  border-radius: 50px;
+  box-shadow: 2px 2px 10px 2px rgba(0,0,0,.3);
+  display: block;
+  &:hover {
+  background-position: right center; 
+  @include button-hover;
+}
 }
 }
