--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,4 +8,11 @@
     &_logo {
         align-content: center;
     }
+    &_icon {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        left: 30px; top: 40%;
+        font-size: 20px;
+    }
 }
