--- a/sass/utils/_functions.scss
+++ b/sass/utils/_functions.scss
@@ -1,3 +1,3 @@
-$button-shadow: darken (rgba(0,0,0,.3), 40%);
+$button-shadow: darken (#d3d3d3, 50%);
 
 $button-search: lighten ($color-secondary, 20%)
