--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@mixin button-hover {
+    opacity: 0.9;
+    transition: 0.4s;
+    box-shadow: 2px 2px 10px 2px rgba(0,0,0,.8);
+}
