--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,3 +2,5 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $text-color: #101010;
+
+$color-gradient: ($color-secondary 0%, $color-primary 70%, $color-secondary 100%);
