--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,6 +1,6 @@
 .spinner{
-    position: absolute;
-    background-color: rgb(255,255,255,0.8);
+    position: relative;
+    background: rgb(255,255,255,0.8);
     width: 100vw;
     height: 100vh;
     .spinner_icon{
@@ -11,7 +11,7 @@
         top: 50px; left: 50px; bottom: 50px; right: 50px;
         animation: spin 15s infinite;
         }
-    .spinner_load{
+    &_load{
     width: 180px;
     height: 180px;
     border: 10px solid transparent;
@@ -23,7 +23,7 @@
     background: rgb(255,255,255,0.8);
     animation: spin 2s  infinite;
 }
-.spinner_load::after{
+    &_load::after{
     content: '';
     position: absolute;
     top: 5px; left: 5px; bottom: 5px; right: 5px;
@@ -32,7 +32,7 @@
     border-top-color: $color-tertiary;
     animation: spin 5s infinite;
 }
-.spinner_load::before{
+    &_load::before{
     content: '';
     position: absolute;
     top: 20px; left: 20px; bottom: 20px; right: 20px;
@@ -48,6 +48,19 @@
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+@keyframes spinner {
+    0%{
+        visibility: visible;
+        opacity: 1;
+    }
+    75%{
+        opacity: 1;
+    }
+    100%{
+        visibility: hidden;
+        opacity: 0;
     }
 }
 }
