--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,4 +3,4 @@ $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $text-color: #101010;
 
-$color-gradient: ($color-secondary 0%, $color-primary 70%, $color-secondary 100%);
+$list: #ff79da 0%,#ff79da 10%,#ff79da 25%,#9356dc 39%,#9356dc 79%,#9356dc 100%; 
