--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -9,3 +9,8 @@
     transition: 0.4s;
     box-shadow: 2px 2px 10px 2px rgba(0,0,0,.8);
 }
+
+@mixin gradient {
+    background: linear-gradient(top, $list);
+  
+}
