--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -66,51 +66,40 @@
         margin-left: 15px;
         line-height: 5px;
     }
-    &_heart{
-        margin-right: 30px;
-        font-size: 150%;
-    }
-    
 }
 
 /*-- heart animation --*/
 
-.fa-heart {
+/*.fa-heart {
     border: black;
-    background: white;
-    /*border-radius: 50%;
-    padding:.2em;*/
+    background: transparent;
+    
 }
 .fa-heart::before {
     font-weight: bold;
     transition: color 1s ease-out;
 }
 .fa-heart:hover::before{
-    color: $color-primary;
-    cursor: pointer;
+   color: $color-primary;
+   cursor: pointer;
 }
-
-
-/*autre exemple
-
-<p><a class="jauge" href="#"><span class="jauge-remplissage"></span></a></p>
-.jauge {
-    width: 100px;
-    height: 200px;
-    display: block;
-    background-color: #303030;
-    position: relative;
-}
-.jauge-remplissage {
-    transition: all 0.3s linear 0s;
-    background-color: #33BEE5;
-    width: 100%;
-    height: 0;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
- 
-.jauge:hover .jauge-remplissage {
-    height: 100%;
-}*/
+*/
+ /* -- autre test --*/
+ .fa-heart{	
+      display:flex;
+      font-size: 1.8em;
+      color:transparent;
+      -webkit-text-stroke:2px black;
+      opacity:0.4;
+      margin-right: 30px;
+  
+  }
+  
+  .fa-heart:hover{
+      background:linear-gradient(#FF79DA, #9356DC);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-stroke: 0px;
+      opacity:1;
+      transition: all 1.8s ease-in-out;  
+    }
