--- a/public/style.css
+++ b/public/style.css
@@ -52,10 +52,11 @@ a:visited {
 }
 .hero_button-sub:hover {
   background-position: right center;
-  background: lighten #FF79DA, 20%;
   color: #fff;
   text-decoration: none;
-  box-shadow: darken #d3d3d3, 50%;
+  opacity: 0.9;
+  transition: 0.4s;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.8);
 }
 
 .menu_button {
@@ -99,6 +100,7 @@ a:visited {
   bottom: 50px;
   right: 50px;
   animation: spin 15s infinite;
+  transform: rotate(-360deg);
 }
 .spinner_load {
   width: 180px;
@@ -113,7 +115,7 @@ a:visited {
   right: 0;
   bottom: 0;
   background: rgba(255, 255, 255, 0.8);
-  animation: spin 2s infinite;
+  animation: spin 4s infinite;
 }
 .spinner_load::after {
   content: "";
@@ -142,20 +144,13 @@ a:visited {
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+    opacity: 1;
+  }
+  95% {
+    opacity: 0.9;
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-@keyframes spinner {
-  0% {
-    visibility: visible;
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
     visibility: hidden;
     opacity: 0;
   }
@@ -286,52 +281,41 @@ a:visited {
   margin-left: 15px;
   line-height: 5px;
 }
-.restaurant_bloc_heart {
-  margin-right: 30px;
-  font-size: 150%;
-}
 
 /*-- heart animation --*/
-.fa-heart {
-  border: black;
-  background: white;
-  /*border-radius: 50%;
-  padding:.2em;*/
-}
+/*.fa-heart {
+    border: black;
+    background: transparent;
 
+}
 .fa-heart::before {
-  font-weight: bold;
-  transition: color 1s ease-out;
+    font-weight: bold;
+    transition: color 1s ease-out;
+}
+.fa-heart:hover::before{
+   color: $color-primary;
+   cursor: pointer;
+}
+*/
+/* -- autre test --*/
+.fa-heart {
+  display: flex;
+  font-size: 1.8em;
+  color: transparent;
+  -webkit-text-stroke: 2px black;
+  opacity: 0.4;
+  margin-right: 30px;
 }
 
-.fa-heart:hover::before {
-  color: #9356DC;
-  cursor: pointer;
+.fa-heart:hover {
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-stroke: 0px;
+  opacity: 1;
+  transition: all 1.8s ease-in-out;
 }
 
-/*autre exemple
-
-<p><a class="jauge" href="#"><span class="jauge-remplissage"></span></a></p>
-.jauge {
-    width: 100px;
-    height: 200px;
-    display: block;
-    background-color: #303030;
-    position: relative;
-}
-.jauge-remplissage {
-    transition: all 0.3s linear 0s;
-    background-color: #33BEE5;
-    width: 100%;
-    height: 0;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
-
-.jauge:hover .jauge-remplissage {
-    height: 100%;
-}*/
 .image {
   width: 100%;
   height: 50vh;
@@ -483,7 +467,6 @@ a:visited {
 .notice_steps {
   display: flex;
   flex-direction: column;
-  width: 95%;
   margin-top: 4%;
 }
 .notice_step {
