--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,10 @@
+// main colors
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+
+// text color
 $text-color: #101010;
 
-$list: #ff79da 0%,#ff79da 10%,#ff79da 25%,#9356dc 39%,#9356dc 79%,#9356dc 100%; 
+// effect colors
+$color-heart:linear-gradient($color-primary, $color-secondary);
