--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,5 +1,5 @@
-.spinner{
-    position: relative;
+/*.spinner{
+    position: absolute;
     background: rgb(255,255,255,0.8);
     width: 100vw;
     height: 100vh;
@@ -9,7 +9,7 @@
         margin: auto;
         position: absolute;
         top: 50px; left: 50px; bottom: 50px; right: 50px;
-        animation: spin 15s infinite;
+        animation: spin 15s forwards;
         }
     &_load{
     width: 180px;
@@ -21,7 +21,7 @@
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
     background: rgb(255,255,255,0.8);
-    animation: spin 4s  infinite;
+    animation: spin 4s ease-out forwards;
 }
     &_load::after{
     content: '';
@@ -30,7 +30,7 @@
     border-radius: 50%;
     border: 10px solid transparent;
     border-top-color: $color-tertiary;
-    animation: spin 5s infinite;
+    animation: spin 5s forwards;
 }
     &_load::before{
     content: '';
@@ -39,7 +39,7 @@
     border-radius: 50%;
     border: 10px solid transparent;
     border-top-color: $color-secondary;
-    animation: spin 8s  infinite;
+    animation: spin 8s  forwards;
 }
 
 @keyframes spin {
@@ -47,13 +47,15 @@
         transform: rotate(0deg);
         opacity: 1;
     }
-    95%{
-        opacity: 0.9;
+    90%{
+        opacity: 1;
+    }
+    99%{
+        opacity: 0.8;
     }
     100%{
         transform: rotate(360deg);
-        visibility: hidden;
         opacity: 0;
     }
 }
-}
+}*/
