--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,6 +33,7 @@
   background-size: 200%;
   color: white;            
   border-radius: 50px;
+  border: none;
   box-shadow: 2px 2px 10px 2px rgba(0,0,0,.3);
   display: block;
   &:hover {
