--- a/public/style.css
+++ b/public/style.css
@@ -85,67 +85,82 @@ a:visited {
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.8);
 }
 
-/*.spinner{
-    position: absolute;
-    background: rgb(255,255,255,0.8);
-    width: 100vw;
-    height: 100vh;
-    .spinner_icon{
-        color: $color-primary;
-        font-size: 70px;
-        margin: auto;
-        position: absolute;
-        top: 50px; left: 50px; bottom: 50px; right: 50px;
-        animation: spin 15s forwards;
-        }
-    &_load{
-    width: 180px;
-    height: 180px;
-    border: 10px solid transparent;
-    border-top-color: $color-primary;
-    border-radius: 50%;
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgb(255,255,255,0.8);
-    animation: spin 4s ease-out forwards;
+.spinner {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.8);
+  width: 100vw;
+  height: 100vh;
 }
-    &_load::after{
-    content: '';
-    position: absolute;
-    top: 5px; left: 5px; bottom: 5px; right: 5px;
-    border-radius: 50%;
-    border: 10px solid transparent;
-    border-top-color: $color-tertiary;
-    animation: spin 5s forwards;
+.spinner .spinner_icon {
+  color: #9356DC;
+  font-size: 70px;
+  margin: auto;
+  position: absolute;
+  top: 50px;
+  left: 60px;
+  bottom: 50px;
+  right: 50px;
+  animation: spin 15s 0.25s forwards;
 }
-    &_load::before{
-    content: '';
-    position: absolute;
-    top: 20px; left: 20px; bottom: 20px; right: 20px;
-    border-radius: 50%;
-    border: 10px solid transparent;
-    border-top-color: $color-secondary;
-    animation: spin 8s  forwards;
+.spinner_load {
+  width: 180px;
+  height: 180px;
+  border: 10px solid transparent;
+  border-top-color: #9356DC;
+  border-radius: 50%;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8);
+  animation: spin 4s 0.25s ease-out forwards;
+}
+.spinner_load:hover {
+  animation-play-state: paused;
+}
+.spinner_load::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  bottom: 5px;
+  right: 5px;
+  border-radius: 50%;
+  border: 10px solid transparent;
+  border-top-color: #99E2D0;
+  animation: spin 5s 0.25s forwards;
+}
+.spinner_load::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50%;
+  border: 10px solid transparent;
+  border-top-color: #FF79DA;
+  animation: spin 8s 0.25s forwards;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0.8;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
 }
 
-@keyframes spin {
-    0%{
-        transform: rotate(0deg);
-        opacity: 1;
-    }
-    90%{
-        opacity: 1;
-    }
-    99%{
-        opacity: 0.8;
-    }
-    100%{
-        transform: rotate(360deg);
-        opacity: 0;
-    }
-}
-}*/
 .header {
   box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.2);
   position: relative;
@@ -386,6 +401,59 @@ a:visited {
   font-weight: 700;
   font-size: 0.95em;
   padding: 0 15px 10px 0;
+}
+
+/*-- menu animation --*/
+.menu_dishes {
+  animation: opacity 1.5s both;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.menu_dishes--1 {
+  animation-delay: 0.3s;
+}
+
+.menu_dishes--2 {
+  animation-delay: 0.5s;
+}
+
+.menu_dishes--3 {
+  animation-delay: 0.7s;
+}
+
+.menu_dishes--4 {
+  animation-delay: 0.9s;
+}
+
+.menu_dishes--5 {
+  animation-delay: 1.1s;
+}
+
+.menu_dishes--6 {
+  animation-delay: 1.3s;
+}
+
+.menu_dishes--7 {
+  animation-delay: 1.5s;
+}
+
+.menu_dishes--8 {
+  animation-delay: 1.7s;
+}
+
+.menu_dishes--9 {
+  animation-delay: 1.9s;
+}
+
+.menu_dishes--10 {
+  animation-delay: 2.1s;
 }
 
 /*-- location search */
