--- a/public/style.css
+++ b/public/style.css
@@ -86,16 +86,18 @@ a:visited {
 }
 
 .spinner {
-  position: absolute;
-  background: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  background-color: white;
   width: 100vw;
   height: 100vh;
+  visibility: hidden;
+  z-index: 20;
 }
 .spinner .spinner_icon {
   color: #9356DC;
   font-size: 70px;
   margin: auto;
-  position: absolute;
+  position: fixed;
   top: 50px;
   left: 60px;
   bottom: 50px;
@@ -109,20 +111,22 @@ a:visited {
   border-top-color: #9356DC;
   border-radius: 50%;
   margin: auto;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: rgba(255, 255, 255, 0.8);
   animation: spin 4s 0.25s ease-out forwards;
+  z-index: 10;
+  visibility: hidden;
 }
 .spinner_load:hover {
   animation-play-state: paused;
 }
 .spinner_load::after {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 5px;
   left: 5px;
   bottom: 5px;
@@ -148,6 +152,7 @@ a:visited {
   0% {
     transform: rotate(0deg);
     opacity: 1;
+    visibility: visible;
   }
   90% {
     opacity: 1;
@@ -158,6 +163,7 @@ a:visited {
   100% {
     transform: rotate(360deg);
     opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -404,8 +410,81 @@ a:visited {
 }
 
 /*-- menu animation --*/
+/*.menu_dishes{
+   animation: opacity 1.5s both;
+}
+
+@keyframes opacity {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.menu_dishes--1{
+    animation-delay: 0.3s;
+}
+.menu_dishes--2{
+    animation-delay: 0.5s;
+}
+.menu_dishes--3{
+    animation-delay: 0.7s;
+}
+.menu_dishes--4{
+    animation-delay: 0.9s;
+}
+.menu_dishes--5{
+    animation-delay: 1.1s;
+}
+.menu_dishes--6{
+    animation-delay: 1.3s;
+}
+.menu_dishes--7{
+    animation-delay: 1.5s;
+}
+.menu_dishes--8{
+    animation-delay: 1.7s;
+}
+.menu_dishes--9{
+    animation-delay: 1.9s;
+}
+.menu_dishes--10{
+    animation-delay: 2.1s;
+}*/
 .menu_dishes {
   animation: opacity 1.5s both;
+}
+.menu_dishes--1 {
+  animation-delay: 200ms;
+}
+.menu_dishes--2 {
+  animation-delay: 400ms;
+}
+.menu_dishes--3 {
+  animation-delay: 600ms;
+}
+.menu_dishes--4 {
+  animation-delay: 800ms;
+}
+.menu_dishes--5 {
+  animation-delay: 1000ms;
+}
+.menu_dishes--6 {
+  animation-delay: 1200ms;
+}
+.menu_dishes--7 {
+  animation-delay: 1400ms;
+}
+.menu_dishes--8 {
+  animation-delay: 1600ms;
+}
+.menu_dishes--9 {
+  animation-delay: 1800ms;
+}
+.menu_dishes--10 {
+  animation-delay: 2000ms;
 }
 
 @keyframes opacity {
@@ -416,46 +495,6 @@ a:visited {
     opacity: 1;
   }
 }
-.menu_dishes--1 {
-  animation-delay: 0.3s;
-}
-
-.menu_dishes--2 {
-  animation-delay: 0.5s;
-}
-
-.menu_dishes--3 {
-  animation-delay: 0.7s;
-}
-
-.menu_dishes--4 {
-  animation-delay: 0.9s;
-}
-
-.menu_dishes--5 {
-  animation-delay: 1.1s;
-}
-
-.menu_dishes--6 {
-  animation-delay: 1.3s;
-}
-
-.menu_dishes--7 {
-  animation-delay: 1.5s;
-}
-
-.menu_dishes--8 {
-  animation-delay: 1.7s;
-}
-
-.menu_dishes--9 {
-  animation-delay: 1.9s;
-}
-
-.menu_dishes--10 {
-  animation-delay: 2.1s;
-}
-
 /*-- location search */
 .location {
   display: flex;
