--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,13 +1,15 @@
 .spinner{
-    position: absolute;
-    background: rgb(255,255,255,0.8);
+    position: fixed;
+    background: white;
     width: 100vw;
     height: 100vh;
+    visibility: hidden;
+    z-index: 20;
     .spinner_icon{
         color: $color-primary;
         font-size: 70px;
         margin: auto;
-        position: absolute;
+        position: fixed;
         top: 50px; left: 60px; bottom: 50px; right: 50px;
         animation: spin 15s 0.25s forwards;
         }
@@ -18,17 +20,19 @@
     border-top-color: $color-primary;
     border-radius: 50%;
     margin: auto;
-    position: absolute;
+    position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
     background: rgb(255,255,255,0.8);
     animation: spin 4s 0.25s ease-out forwards;
+    z-index: 10;
+    visibility: hidden;
     &:hover{
         animation-play-state: paused;
     }
 }
     &_load::after{
     content: '';
-    position: absolute;
+    position: fixed;
     top: 5px; left: 5px; bottom: 5px; right: 5px;
     border-radius: 50%;
     border: 10px solid transparent;
@@ -49,6 +53,7 @@
     0%{
         transform: rotate(0deg);
         opacity: 1;
+        visibility: visible;
     }
     90%{
         opacity: 1;
@@ -59,6 +64,7 @@
     100%{
         transform: rotate(360deg);
         opacity: 0;
+        visibility: hidden;
     }
 }
 }
